# DNPlayerDemo

./: settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/keven/dnplayerdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  DNFFmpeg.cpp  DNFFmpeg.h  JavaCallHelper.cpp  JavaCallHelper.h  VideoChannel.cpp  VideoChannel.h  native-lib.cpp
app/src/main/java/com/keven/dnplayerdemo/: DNPlayer.java  LiveAdapter.java  MainActivity.java  PlayActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/keven/dnplayerdemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
